<resources>
    <string name="app_name">MultiChat</string>
    <string name="email">Email</string>
    <string name="existing_user_login">Already have an account?</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="send_button">Send</string>
    <string name="welcome_to_world_chat">Welcome to World Chat</string>
    <string name="global_chat_room">Global Chat Room</string>
    <string name="map_of_users">Map of Users</string>
    <string name="users_in_char">Users in Chat</string>
    <string name="edit_profile">Edit Profile</string>r
    <string name="notifications">Notifications</string>
    <string name="log_out">Log out</string>
    <string name="you_are_here">You are here</string>
    <string name="drawer_open" translatable="false">Open navigation drawer</string>
    <string name="drawer_close" translatable="false">Close navigation drawer</string>
    <string name="save">Save</string>
    <string name="authentication_text">Please enter current email and password to confirm your account</string>
    <string name="ok">OK</string>
    <string name="user_info" translatable="false">user information</string>
    <string name="s_language" translatable="false">language</string>
    <string name="s_location" translatable="false">location</string>
    <string name="s_uid" translatable="false">uid</string>
    <string name="s_email" translatable="false">email</string>
    <string name="chat_in">Chat in</string>
    <string name="english_lang">English</string>
    <string name="spanish_lang">Spanish</string>
    <string name="russian_lang">Russian</string>
    <string name="japanese_lang">Japanese</string>
    <string name="location">Location</string>
    <string name="s_country">country</string>
    <string name="s_states">city</string>
    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
</resources>
