<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:padding="@dimen/layout_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_below="@id/etEmail"
            android:inputType="textVisiblePassword"
            android:hint="@string/password"/>

        <TextView
            android:id="@+id/tvChatIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/etPwd"
            android:layout_marginLeft="21dp"
            android:layout_marginStart="21dp"
            android:layout_marginTop="17dp"
            android:text="Chat in"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Spinner
            android:id="@+id/spLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvChatIn"
            android:layout_marginLeft="42dp"
            android:layout_marginStart="42dp"
            android:layout_toEndOf="@+id/tvChatIn"
            android:layout_toRightOf="@+id/tvChatIn"
            android:minWidth="200dp" />

        <ImageView
            android:id="@+id/tvPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvChatIn"
            android:layout_marginTop="28dp"
            android:layout_toLeftOf="@+id/spLanguage"
            android:layout_toStartOf="@+id/spLanguage"
            android:src="@drawable/ic_pin_drop_light_green_24dp" />

        <TextView
            android:id="@+id/tvLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tvPin"
            android:layout_alignLeft="@+id/spLanguage"
            android:layout_alignStart="@+id/spLanguage"
            tools:text="California, USA"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <Button
            android:id="@+id/btSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tvChatIn"
            android:layout_alignStart="@+id/tvChatIn"
            android:layout_below="@+id/tvPin"
            android:layout_marginTop="56dp"
            android:background="@color/green_normal"
            android:textColor="@android:color/white"
            android:text="@string/sign_up" />
    </RelativeLayout>
</layout>
